fix(autocomplete): Fix tasks sometimes not showing in the Project dropdown when searching
The latest layout for the projects + tasks uses flex, but the olden autocomplete CSS classes were overriding it to `display:block`. This broke the display of the task list label.

Change to specifically handle project rows and ensure they are flex.

Fixes #1737.

--- a/src/styles/autocomplete.css
+++ b/src/styles/autocomplete.css
@@ -113,6 +113,10 @@
   display: block !important;
 }
 
+.client-list.filter-match .project-row {
+  display: flex !important;
+}
+
 .item-name {
   padding-left: 5px;
   overflow: hidden;
